--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,11 +3,13 @@
     <string name="prompt_password">Password</string>
     <string name="prompt_encoding_format">Encoding format</string>
     <string name="decode">Decode</string>
+    <string name="open">Open</string>
     <string name="enter">Enter</string>
     <string name="error_invalid_password">This password is too short</string>
     <string name="error_incorrect_password">This password is incorrect</string>
     <string name="error_field_required">This field is required</string>
     <string name="permission_rationale">"File system permissions are needed for reading encrypted files."</string>
+    <string name="unreadable_file">Unreadable file</string>
 
     <string-array name="encoding_format">
         <item>Text</item>
