--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,15 +1,10 @@
 <resources>
     <string name="app_name">cXor</string>
     <string name="prompt_password">Password</string>
-    <string name="prompt_encoding_format">Encoding format</string>
     <string name="decode">Decode</string>
     <string name="open">Open</string>
     <string name="enter">Enter</string>
-    <string name="error_invalid_password">This password is too short</string>
-    <string name="error_incorrect_password">This password is incorrect</string>
-    <string name="error_field_required">This field is required</string>
     <string name="permission_rationale">"File system permissions are needed for reading encrypted files."</string>
-    <string name="unreadable_file">Unreadable file</string>
     <string name="save">Save</string>
     <string name="s_new">New</string>
     <string name="clear">Clear</string>
@@ -17,6 +12,7 @@
     <string name="hide">Hide</string>
     <string name="show">Show</string>
     <string name="share">Share</string>
+    <string name="close">Close</string>
 
     <string-array name="encoding_format">
         <item>Text</item>
